style: adapt all tests to new stable style
